--- a/QLPhongMachTuWPF/View/Diagnosis.xaml
+++ b/QLPhongMachTuWPF/View/Diagnosis.xaml
@@ -32,7 +32,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0"  Style="{StaticResource addBtn}" Click="AddDiagnosisButton_Click">
+        <Button Grid.Row="0" Command="{Binding AddDiagnosisCommand}"  Style="{StaticResource addBtn}" Click="AddDiagnosisButton_Click">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Diagnosis" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
