--- a/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        Title="AddMedicineDiagnosis" Height="600" Width="800"
+        Title="AddMedicineDiagnosis" Height="700" Width="800"
                 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
 
@@ -33,13 +33,8 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
             <!--Logo-->
             <Grid Grid.Row="0">
                 <Border CornerRadius="10 0 0 0" Background="#1ca7ec">
-
                 </Border>
-                <materialDesign:PackIcon Kind="Calendar" Style="{StaticResource icon}"/>
-
-
-
-
+                <materialDesign:PackIcon Kind="ClipboardEdit" Style="{StaticResource icon}"/>
             </Grid>
             <!--chu-->
             <Grid Grid.Row="1">
@@ -52,18 +47,15 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
                     </Border.Background>
                 </Border>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock Text="A" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="P" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="P" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="O" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="D" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="A" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="G" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                     <TextBlock Text="N" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="T" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="M" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="E" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="N" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-                    <TextBlock Text="T" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
-
+                    <TextBlock Text="O" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="S" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="S" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
                 </StackPanel>
             </Grid>
         </Grid>
@@ -93,12 +85,12 @@ Grid.Column="1" Panel.ZIndex="1"
                     </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="ADD APPOINTMENT" Style="{StaticResource titleText}"/>
+                <TextBlock Text="ADD DIAGNOSIS" Style="{StaticResource titleText}"/>
             </Grid>
 
             <!--Input-->
 
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" >
                 <Border CornerRadius="0 0 10 0" Background="White"/>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 50 0 0">
                     <!--name-->
@@ -118,9 +110,9 @@ Grid.Column="1" Panel.ZIndex="1"
                     Width="250" Margin="60 0 0 0" FontSize="16"/>
                 </StackPanel>
 
-                <TextBlock Text="Date of birth" Margin="80 -250 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Date of birth" Margin="80 -380 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 150 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 130 0 0">
                     <!--Date of birth-->
                     <ComboBox Text="{Binding Ngay}" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
@@ -143,11 +135,11 @@ Grid.Column="1" Panel.ZIndex="1"
                                 Width="250" Margin="60 0 0 0" FontSize="16"/>
                 </StackPanel>
 
-                <TextBlock Text="Appointment day" Margin="80 -50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Gender" Margin="390 -50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Appointment day" Margin="80 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Gender" Margin="390 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 250 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 210 0 0">
                     <!--Day appointment-->
                     <ComboBox Text="{Binding NgayKham}" x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
@@ -167,9 +159,9 @@ Grid.Column="1" Panel.ZIndex="1"
            FontSize="16" Margin="60 0 0 0"/>
 
                 </StackPanel>
-                <TextBlock Text="Status" Margin="390 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Status" Margin="390 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 350 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 290 0 0">
                     <!--Day appointment-->
                     <TextBox
                         Text="{Binding TenNV}"
@@ -186,9 +178,30 @@ FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
 
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 370 0 0">
+                  
+                    <TextBox
+                        
+                        VerticalAlignment="Center"
+            materialDesign:HintAssist.Hint="Symptom"
+            Style="{StaticResource MaterialDesignOutlinedTextBox}"
+            Width="560" FontSize="16"/>
+                </StackPanel>
 
-                <Button Command="{Binding AddAppointmentCommand}" 
-                    Content="Add appointment" VerticalAlignment="Bottom" HorizontalAlignment="Left"  Margin=" 80 0 0 50" Style="{StaticResource btnAdd}">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 450 0 0">
+                    <TextBox
+            
+            VerticalAlignment="Center"
+materialDesign:HintAssist.Hint="Result"
+Style="{StaticResource MaterialDesignOutlinedTextBox}"
+Width="560" FontSize="16"/>
+                </StackPanel>
+
+
+
+
+                <Button Command="{Binding AddDiagnosisCommand}" 
+                    Content="Add Diagnosis" VerticalAlignment="Bottom" HorizontalAlignment="Left"  Margin=" 80 0 0 50" Style="{StaticResource btnAdd}">
 
                 </Button>
 
