--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        Title="ModifyDiagnosis" Height="600" Width="800"
+        Title="ModifyDiagnosis" Height="700" Width="800"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
     <Window.Resources>
@@ -95,75 +95,118 @@ Grid.Column="1" Panel.ZIndex="1"
 
             <!--Input-->
 
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" >
                 <Border CornerRadius="0 0 10 0" Background="White"/>
-                <TextBlock Text="Date" Margin="80 -450 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Status" Margin="390 -450 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 50 0 0">
+                    <!--name-->
+                    <TextBox
+                         Text="{Binding TenBN}"
+                         VerticalAlignment="Center"
+                         materialDesign:HintAssist.Hint="Name"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                         Width="250" FontSize="16"/>
 
-                    <!--Date-->
-                    <ComboBox x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                            
-                              FontSize="16"/>
+                    <!--Phone-->
+                    <TextBox
+                        Text="{Binding DienThoai}"
+                    VerticalAlignment="Center"
+                    materialDesign:HintAssist.Hint="Phone"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    Width="250" Margin="60 0 0 0" FontSize="16"/>
+                </StackPanel>
 
-                    <ComboBox x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-        
-         FontSize="16" Margin="10 0 0 0"/>
+                <TextBlock Text="Date of birth" Margin="80 -380 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
-                    <ComboBox x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 130 0 0">
+                    <!--Date of birth-->
+                    <ComboBox Text="{Binding Ngay}" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                             
+                               FontSize="16"/>
 
-FontSize="16" Margin="10 0 0 0"/>
+                    <ComboBox Text="{Binding Thang}" x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+         
+          FontSize="16" Margin="10 0 0 0"/>
 
-                    <!--Status-->
-                    <ComboBox Text="{Binding Status}" x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Nam}" x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+
+ FontSize="16" Margin="10 0 0 0"/>
+
+                    <!--Address-->
+                    <TextBox 
+                        Text="{Binding DiaChi}"
+                        VerticalAlignment="Center"
+                                materialDesign:HintAssist.Hint="Address"
+                                Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                Width="250" Margin="60 0 0 0" FontSize="16"/>
+                </StackPanel>
+
+                <TextBlock Text="Appointment day" Margin="80 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Gender" Margin="390 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 210 0 0">
+                    <!--Day appointment-->
+                    <ComboBox Text="{Binding NgayKham}" x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                             
+                               FontSize="16"/>
+
+                    <ComboBox Text="{Binding ThangKham}" x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+         
+          FontSize="16" Margin="10 0 0 0"/>
+
+                    <ComboBox Text="{Binding NamKham}" x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+
+ FontSize="16" Margin="10 0 0 0"/>
+                    <!--Gender-->
+                    <ComboBox
+                        Text="{Binding Gender}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+         
+           FontSize="16" Margin="60 0 0 0"/>
+
+                </StackPanel>
+                <TextBlock Text="Status" Margin="390 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 290 0 0">
+                    <!--Day appointment-->
+                    <TextBox
+                        Text="{Binding TenNV}"
+                        VerticalAlignment="Center"
+            materialDesign:HintAssist.Hint="Staff Name"
+            Style="{StaticResource MaterialDesignOutlinedTextBox}"
+            Width="250" FontSize="16"/>
+
+                    <ComboBox Text="{Binding Status}"  x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
 FontSize="16" Margin="60 0 0 0"/>
 
+
                 </StackPanel>
 
 
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 370 0 0">
 
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 150 0 0">
-                    <!--symptom-->
                     <TextBox
-                        Text="{Binding Unit}"
-Height="73"
-                        Width="249"
-materialDesign:HintAssist.Hint="Symptom"
-AcceptsReturn="True"
-
-Style="{StaticResource MaterialDesignOutlinedTextBox}"
-TextWrapping="Wrap"
-VerticalScrollBarVisibility="Auto"
-                        FontSize="16"
                         
-/>
+                        VerticalAlignment="Center"
+            materialDesign:HintAssist.Hint="Symptom"
+            Style="{StaticResource MaterialDesignOutlinedTextBox}"
+            Width="560" FontSize="16"/>
                 </StackPanel>
 
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 250 0 0">
-                    <!--Result-->
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 450 0 0">
                     <TextBox
-                        Text="{Binding Unit}"
-Height="73"
-                        Width="249"
+            
+            VerticalAlignment="Center"
 materialDesign:HintAssist.Hint="Result"
-AcceptsReturn="True"
-
 Style="{StaticResource MaterialDesignOutlinedTextBox}"
-TextWrapping="Wrap"
-VerticalScrollBarVisibility="Auto"
-                        FontSize="16"
-                        
-/>
+Width="560" FontSize="16"/>
                 </StackPanel>
 
 
 
 
-
-                <Button Content="Save changes"  Style="{StaticResource btnAdd}">
+                <Button Command="{Binding AddDiagnosisCommand}" 
+                    Content="Modify Diagnosis" VerticalAlignment="Bottom" HorizontalAlignment="Left"  Margin=" 80 0 0 50" Style="{StaticResource btnAdd}">
 
                 </Button>
 
